2007-02-07  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amindexd.c: Use dbfd.

2007-02-06  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/alloc.c (vstrallocf): New function.
	* common-src/amanda.h (vstrallocf): Prototype.
	* client-src/sendsize.c: Send error if fe_rep_sendsize_quoted_error.
	* common-src/amfeatures.c (am_init_feature_set): Set
						 fe_rep_sendsize_quoted_error.
	* common-src/amfeatures.h (fe_rep_sendsize_quoted_error): new features.
	* server-src/planner.c: Receive error message from sendsize.

2007-02-06  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c, changer-src/scsi-linux.c,
	  common-src/conffile.c, configure.in,
	  man/Makefile.am, man/xml-source/amcheck.8.xml,
	  server-src/amlabel.c, server-src/taper.c: Merge from zmanda.

2007-02-06  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/clock.c (timesub): The result must always be positive.

2007-02-05  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-zd-mtx.sh.in: Fix for sed and IMPORT/EXPORT.

2007-02-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Add parentheses.

2007-02-02  Jean-Louis Martineau <martineau@zmanda.com>
	* contrib/gnulib-update-current: New file.
	* Makefile.am (EXTRA_DIST): Add contrib/gnulib-update-current.

2007-02-02  Jean-Louis Martineau <martineau@zmanda.com>
	* man/Makefile.am: Use http://docbook.sourceforge.net
	* man/xml-source/amadmin.8.xml, man/xml-source/amaespipe.8.xml,
	  man/xml-source/amanda.8.xml, man/xml-source/amanda-client.conf.5.xml,
	  man/xml-source/amanda.conf.5.xml, man/xml-source/amcheck.8.xml,
	  man/xml-source/amcrypt.8.xml, man/xml-source/amdump.8.xml,
	  man/xml-source/amfetchdump.8.xml, man/xml-source/amflush.8.xml,
	  man/xml-source/amgetconf.8.xml, man/xml-source/amlabel.8.xml,
	  man/xml-source/ammt.8.xml, man/xml-source/amrecover.8.xml,
	  man/xml-source/amreport.8.xml,
	  man/xml-source/amtape.8.xml: Fix for xmllint.